<?xml version="1.0"?>
<package format="2">
  <name>mobile_catkin_gradle_plugins</name>
  <version>0.4.1</version>
  <description>Bootstrap utilities for rosmobile builds</description>

  <author>Ronaldson Bellande</author>
  <maintainer email="ronaldsonbellande@gmail.com">Ronaldson Bellande</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosmobile_build_tools</build_depend>

  <build_export_depend>rosmobile_build_tools</build_export_depend>

  <exec_depend>rosmobile_build_tools</exec_depend>

</package>
